[package]
name = "rovv"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "readme.md"
keywords = [ "anonymous", "structural", "polymorphism", "row"]
categories = [ "rust-patterns" ]
description = "provide the anonymous row type (poor-man's row polymorphism) in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
inwelling = "0.3"

[dependencies]
rovv_derive = { path = "../rovv_derive" }
lens-rs = "0.2"