[package]
name = "rovv"
version = "0.2.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "readme.md"
keywords = [ "anonymous", "structural", "polymorphism", "row"]
categories = [ "rust-patterns" ]
repository = "https://github.com/TOETOE55/rovv"
description = "provide the anonymous row type (poor-man's row polymorphism) in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
inwelling = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit","visit-mut"] }

[dependencies]
rovv_derive = { path = "../rovv_derive", version = "0.2" }
lens-rs = "0.3"