[package]
name = "rovv_test"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lens-rs = "0.3"
rovv = { path = "../rovv" }

[package.metadata.inwelling]
lens-rs_generator = true
rovv = true