[package]
name = "rowpoly"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
inwelling = "0.3"

[dependencies]
rowpoly_derive = { path = "../rowpoly_derive" }
lens-rs = "0.2"