[package]
name = "rowpoly_test"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowpoly = { path = "../rowpoly" }
lens-rs = "0.2"

[package.metadata.inwelling]
lens-rs = true